--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde_json = "1.0.66"
 serde = { version = "1.0.128", features = ["derive"] }
 async-trait = "0.1.51"
 flume = "0.10.8"
+regex = "1.5.4"
