--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde = { version = "1.0.128", features = ["derive"] }
 async-trait = "0.1.51"
 flume = "0.10.8"
 regex = "1.5.4"
+flate2 = "1.0.24"
