--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,10 @@ async-trait = "0.1.51"
 flume = "0.10.8"
 regex = "1.5.4"
 flate2 = "1.0.24"
+tokio-tar = { path = "../../rust/tokio-tar" }
+async-compression = { version = "0.3.14", features = [
+  "gzip",
+  "bzip2",
+  "tokio",
+] }
+bytes = "1.2.1"
