add command line interface

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ async-compression = { version = "0.3.14", features = [
 bytes = "1.2.1"
 log = "0.4.17"
 env_logger = "0.9.1"
+clap = { version = "4.0.13", features = ["derive"] }
