use toko-tar from crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,6 @@ async-trait = "0.1.51"
 flume = "0.10.8"
 regex = "1.5.4"
 flate2 = "1.0.24"
-tokio-tar = { path = "../../rust/tokio-tar" }
 async-compression = { version = "0.3.14", features = [
   "gzip",
   "bzip2",
@@ -28,3 +27,4 @@ log = "0.4.17"
 env_logger = "0.9.1"
 clap = { version = "4.0.13", features = ["derive"] }
 colored = "2.0.0"
+tokio-tar = "0.3.0"
