--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,20 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.43"
-tokio = { version = "1.10.0", features = ["full"] }
+tokio = { version = "1.10.0", features = [
+  "fs",
+  "macros",
+  "rt",
+  "rt-multi-thread",
+  "signal",
+  "test-util",
+] }
 futures = "0.3.16"
 url = "2.2.2"
 reqwest = "0.11.4"
 serde_json = "1.0.66"
 serde = { version = "1.0.128", features = ["derive"] }
 async-trait = "0.1.51"
-flume = "0.10.8"
 regex = "1.5.4"
 flate2 = "1.0.24"
 async-compression = { version = "0.3.14", features = [
