--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,6 +22,7 @@ jobs:
         rustup update
         rustup component add clippy
         rustup install nightly
+        rustup default nightly
 
     - name: Toolchain info
       run: |
