--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,9 +2,9 @@ name: Rust
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "**" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "**" ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -16,7 +16,30 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    - name: Update local toolchain
+      run: |
+        rustup update
+        rustup install nightly
+        rustup default nightly
+        rustup component add clippy rustfmt
+
+    - name: Toolchain info
+      run: |
+        cargo --version --verbose
+        rustc --version
+        cargo clippy --version
+
+    - name: Lint
+      run: |
+        cargo fmt -- --check
+        cargo clippy -- -D warnings
+
+    - name: Test
+      run: |
+        cargo check
+        cargo test --all
+
     - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      run: |
+        cargo build --release
