--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -62,6 +62,9 @@ jobs:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
+    - id: docker-tag
+      uses: yuya-takeyama/docker-tag-from-github-ref-action@v1
+
     - name: Build and push
       uses: docker/build-push-action@v3
       with:
@@ -70,6 +73,6 @@ jobs:
         push: true
         tags: |
           ghcr.io/bob3000/harvester:latest
-          ghcr.io/bob3000/harvester:${{github.ref_name}}
+          ghcr.io/bob3000/harvester:${{ steps.docker-tag.outputs.tag }}
           cache-from: type=registry,ref=bob3000/harvester:latest
           cache-to: type=inline
