--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,11 +11,18 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
+    - uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
     - name: Update local toolchain
       run: |
@@ -40,6 +47,31 @@ jobs:
         cargo check
         cargo test --all
 
-    - name: Build
-      run: |
-        cargo build --release
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: "Determine Branch"
+      id: branches
+      uses: transferwise/sanitize-branch-name@v1
+
+    - name: Build and push
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        platforms: linux/amd64
+        push: true
+        cache-from: type=registry,ref=ghcr.io/bob3000/harvester:latest
+        cache-to: type=inline
+        tags: |
+          ghcr.io/bob3000/harvester:latest
+          ghcr.io/bob3000/harvester:${{ steps.branches.outputs.sanitized-branch-name }}
