--- a/Dockerfile.push
+++ b/Dockerfile.push
@@ -1,7 +1,7 @@
 FROM ghcr.io/bob3000/harvester
 
 RUN apt-get update \
-  && apt-get install -y git curl jq \
+  && apt-get install -y git git-lfs curl jq \
   && rm -rf /var/lib/apt/lists/*
 
 COPY docker/docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
