--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ serde = { version = "1.0.147", features = ["derive"] }
 async-trait = "0.1.58"
 regex = "1.7.0"
 flate2 = "1.0.25"
-async-compression = { version = "0.3.15", features = [
+async-compression = { version = "0.4.1", features = [
   "gzip",
   "bzip2",
   "tokio",
@@ -34,3 +34,4 @@ env_logger = "0.10.0"
 clap = { version = "4.0.22", features = ["derive"] }
 colored = "2.0.0"
 tokio-tar = "0.3.0"
+proc-macro2 = { version = "=1.0.66", features=["default", "proc-macro"] }
